# shore-matrix

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: package.yml
contrib/: PKGBUILD
src/: bot.rs  bridge.rs  connection.rs  crypto.rs  homeserver.rs  lib.rs  main.rs  provision.rs  rooms.rs
tests/: bridge_integration.rs
