[package]
name = "shore-matrix"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mythofmeat/shore-matrix"
description = "Matrix bridge for the Silvershore chat daemon."

[dependencies]
shore-protocol = "0.1"
shore-config = "0.1"
shore-swp-client = "0.1"
shore-diagnostics = "0.1"
matrix-sdk = { version = "0.17", default-features = false, features = ["e2e-encryption", "markdown", "sqlite"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime = "0.3"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
toml = "0.8"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
